# test_for_zit

./: .env  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  models.py  pyproject.toml
.github/workflows/: ci.yml
app/: alembic.ini  main.py  models.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 243721b99526_create_db.py  3af4eb6b4e65_edit_product.py  5f9a459daa4b_create_db.py  79f37eb58d8f_create_db.py  b81239267b4f_create_db.py  facd26406a08_create_db.py
tests/: test_main.py
